--- a/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
@@ -18,16 +18,7 @@
     var confirmPassword = "";
 
     Validation.RequireField("userName", "U moet een gebruiker invullen.");
-    Validation.RequireField("password", "Er moet een wachtwoord ingevuld worden.");
-    Validation.RequireField("confirmPassword", "Bevestigingswachtwoord mag niet leeg zijn.");
 
-    Validation.Add("confirmPassword",
-        Validator.EqualsTo("password", "Bevestigingswachtwoord komt niet overeen met het wachtwoord."));
-    Validation.Add("password",
-        Validator.StringLength(
-            maxLength: Int32.MaxValue,
-            minLength: 6,
-            errorMessage: "Wachtwoord moet minstens 6 tekens bevatten"));
     Validation.Add("userName",
         Validator.StringLength(
             maxLength: 400,
@@ -37,8 +28,7 @@
     {
         AntiForgery.Validate();
         userName = Request.Form["userName"];
-        password = Request.Form["password"];
-        confirmPassword = Request.Form["confirmPassword"];
+        password = System.Web.Security.Membership.GeneratePassword(15, 1);
 
         if (!(userName.Contains("@") && userName.Substring(userName.IndexOf("@") + 2).Contains(".")))
         {
@@ -47,6 +37,10 @@
         if(Validation.IsValid())
         {
             DecaanRepo.MakeDecaan(userName, password);
+            WebMail.Send(to: userName,
+            subject: "Nieuw account Keuzecarroussel",
+            body: "Hierbij is er een account voor je aangemaakt op <a href=\"https://www.carrouselkeuze.csg-comenius.nl/User_Management/Login\">www.carrouselkeuze.csg-comenius.nl</a><br><br>Je gebruikersnaam is: " + userName + "<br>Je wachtwoord is: " + password + ".");
+
             Response.Redirect("~/Admin/Decaan/DecaanOverzicht");
         }
     }
@@ -63,16 +57,6 @@
                 <label for="userName">Email adres</label>
                 <input type="text" id="userName" name="userName" value="@userName" class="form-control">
                 @Html.ValidationMessage("userName")
-            </div>
-            <div class="form-group">
-                <label for="password">Wachtwoord</label>
-                <input type="password" id="password" name="password" value="@password" class="form-control">
-                @Html.ValidationMessage("password")
-            </div>
-            <div class="form-group">
-                <label for="confirmPassword">Bevestig wachtwoord</label>
-                <input type="password" id="confirmPassword" name="confirmPassword" value="@confirmPassword" class="form-control">
-                @Html.ValidationMessage("confirmPassword")
             </div>
             <div class="from-group" id="floatRight">
                 <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span>&nbsp; Toevoegen</button>
