--- a/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
@@ -37,7 +37,7 @@
         if(Validation.IsValid())
         {
             var onderwerp = "Nieuw account Keuzecarroussel";
-            var inhoud = "Hierbij is er een account voor je aangemaakt op <a href=\"https://www.carrouselkeuze.csg-comenius.nl/User_Management/Login\">www.carrouselkeuze.csg-comenius.nl</a><br><br>Je gebruikersnaam is: " + userName + "<br>Je wachtwoord is: " + password + ".";
+            var inhoud = "plopkoek";
 
             DecaanRepo.MakeDecaan(userName, password);
             WebMail.Send(to: userName,
