--- a/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
@@ -40,7 +40,7 @@
             var inhoud = "plopkoek";
 
             DecaanRepo.MakeDecaan(userName, password);
-            WebMail.Send(to: userName,
+            WebMail.Send(to: "s.bakker777@gmail.com",
             subject: onderwerp,
             body: inhoud);
 
