--- a/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
@@ -36,10 +36,10 @@
         }
         if(Validation.IsValid())
         {
-            var onderwerp = "poepje";
-            var inhoud = "plopkoek";
+            var onderwerp = "Nieuw account keuzecarrousel";
+            var inhoud = "Hierbij is er een account voor je aangemaakt op <a href=\"https://www.carrouselkeuze.csg-comenius.nl/User_Management/Login\">www.carrouselkeuze.csg-comenius.nl</a><br><br>Je gebruikersnaam is: " + userName + "<br>Je wachtwoord is: " + password + ".";
 
-            WebMail.Send(to: "s.bakker777@gmail.com",
+            WebMail.Send(to: userName,
             subject: onderwerp,
             body: inhoud);
 
