--- a/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
@@ -172,7 +172,36 @@
     </a>
 <br>
 <br>
-
+<div class="bs-callout bs-callout-default">
+    <h4>Let op!</h4>
+    In de E-mail mogen variabelen mogen worden gebruikt:<br><br>
+    <div class="row">
+        <div class="col-md-6">
+            <b>Leerlingvariabelen</b><br><br>
+            <ul>
+                <li>[voornaam]</li>
+                <li>[achternaam]</li>
+                <li>[klas]</li>
+                <li>[leerlingnummer]</li>
+                <li>[niveau]</li>
+                <li>[talentstroomvak]</li>
+                <li>[keuzevakken]</li>
+                <li>[rooster]</li>
+            </ul><br>
+        </div>
+        <div class="col-md-6">
+            <b>Leraarvariabelen</b><br><br>
+            <ul>
+                <li>[voornaam]</li>
+                <li>[achternaam]</li>
+                <li>[vak]</li>
+                <li>[rooster]</li>
+            </ul><br>
+            </div>
+    </div>
+    Voorbeeld: Beste [voornaam], jouw talentstroomvak is [talentstroomvak].<br><br>
+    <span class="glyphicon glyphicon-exclamation-sign"></span>&nbsp; Leerlingvariabelen kunnen niet gebruikt worden in E-Mails naar leraren en vice versa (met uitzondering van <i>[voornaam]</i>, <i>[achternaam]</i> en <i>[rooster]</i>).
+</div>
 <form method="post">
     <div class="form-group">
         <label for="onderwerp">Onderwerp</label>
