--- a/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
@@ -42,6 +42,37 @@
 
 <h2>Nieuw mail concept aanmaken</h2>
 
+<div class="bs-callout bs-callout-default">
+    <h4>Let op!</h4>
+    In de E-mail mogen variabelen mogen worden gebruikt:<br><br>
+    <div class="row">
+        <div class="col-md-6">
+            <b>Leerlingvariabelen</b><br><br>
+            <ul>
+                <li>[voornaam]</li>
+                <li>[achternaam]</li>
+                <li>[klas]</li>
+                <li>[leerlingnummer]</li>
+                <li>[niveau]</li>
+                <li>[talentstroomvak]</li>
+                <li>[keuzevakken]</li>
+                <li>[rooster]</li>
+            </ul><br>
+        </div>
+        <div class="col-md-6">
+            <b>Leraarvariabelen</b><br><br>
+            <ul>
+                <li>[voornaam]</li>
+                <li>[achternaam]</li>
+                <li>[vak]</li>
+                <li>[rooster]</li>
+            </ul><br>
+            </div>
+    </div>
+    Voorbeeld: Beste [voornaam], jouw talentstroomvak is [talentstroomvak].<br><br>
+    <span class="glyphicon glyphicon-exclamation-sign"></span>&nbsp; Leerlingvariabelen kunnen niet gebruikt worden in E-Mails naar leraren en vice versa (met uitzondering van <i>[voornaam]</i>, <i>[achternaam]</i> en <i>[rooster]</i>).
+</div>
+
 <div class="col-md-12">
     <form method="post">
         @Html.ValidationSummary()
