layout fix. stoute Daan.

--- a/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
@@ -44,7 +44,7 @@
 
 <div class="bs-callout bs-callout-default">
     <h4>Let op!</h4>
-    In de E-mail mogen variabelen mogen worden gebruikt:<br><br>
+    In de E-mail mogen variabelen worden gebruikt:<br><br>
     <div class="row">
         <div class="col-md-6">
             <b>Leerlingvariabelen</b><br><br>
