--- a/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
@@ -174,7 +174,7 @@
 <br>
 <div class="bs-callout bs-callout-default">
     <h4>Let op!</h4>
-    In de E-mail mogen variabelen mogen worden gebruikt:<br><br>
+    In de E-mail mogen variabelen worden gebruikt:<br><br>
     <div class="row">
         <div class="col-md-6">
             <b>Leerlingvariabelen</b><br><br>
