--- a/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
@@ -1,8 +1,8 @@
 ﻿@* 
     Permissies: Admin, Decaan
     Te bereiken van: _Layout
-    Linkt door naar: Decaan/Mail/MailToevoegen, Decaan/Mail/MailVerzenden?MailId=[ID], Decaan/Mail/MailWijzigen?MailId=[ID], Decaan/Mail/MailGegevens
-    Beschrijving: Geeft een overzicht van alle (niet-verstuurde) e-mails; geeft de mogelijk om nieuwe e-mails op te stellen, te wijzigen, te versturen of gegevens te wijzigen
+    Linkt door naar: Decaan/Mail/MailToevoegen, Decaan/Mail/MailVerzenden?MailId=[ID]
+    Beschrijving: Geeft een overzicht van alle mail concepten
 *@
 @{
     Layout = "~/_Layout.cshtml";
