--- a/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
@@ -1,6 +1,10 @@
-﻿@{
-    //Deze pagina is bedoeld om nieuwe mails te maken voor bepaalde onderwerpen (Verzenden Userdata, Reminder voor aanmelden, Verzenden Persoonlijk Rooster). De gemaakte mails zullen verschijnen in de Mail Database en opgehaald worden in MailOverzicht.cshtml, waar ze ook gewijzigd kunnen worden. Ze zullen uiteindelijk op de verzend pagina verzonden kunnen worden aan de juiste doelgroep.
-
+﻿@*
+    Permissies: Admin, Decaan
+    Te bereiken van: Decaan/Lokaal/MailOverzicht
+    Linkt door naar: Decaan/Lokaal/MailOverzicht
+    Beschrijving: Vraagt om een onderwerp en inhoud van een mail en voegt hiermee een mail concept toe aan de database
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "E-Mail toevoegen";
 
