--- a/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
@@ -1,10 +1,9 @@
 ﻿@* 
     Permissies: Admin, Decaan
-    Te bereiken van: _Layout
-    Linkt door naar: Decaan/Mail/MailOverzicht, Decaan/Mail/MailBevestiging
-    Beschrijving: Weergeeft de te verzenden e-mail, de verzender heeft op deze pagina de optie om de onvangers te selecteren op relevante eigenschappen, op deze manier kan bijvoorbeeld een herinnerings mail verzend worden naar iedereen die zich nog niet aangemeld heeft.
+    Te bereiken van: Decaan/Mail/MailOverzicht
+    Linkt door naar: Decaan/Mail/MailOverzicht
+    Beschrijving: Geeft een mail weer om te weizigen, versturen of verwijderen
 *@
-
 @{
     Layout = "~/_Layout.cshtml";
     Page.Title = "E-Mail wijzigen/verzenden";
