--- a/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
@@ -29,6 +29,7 @@
             maxLength: 400,
             errorMessage: "gebruiker kan niet meer dan 400 tekens bevatten"));
 
+    // voeg een gebruiker met leraar permissies toe aan de database en verstuur een mail met de inlog gegevens
     if(IsPost)
     {
         AntiForgery.Validate();
@@ -47,13 +48,21 @@
             Validation.AddFormError("De mail kan niet juist zijn.");
         }
 
-        if(Validation.IsValid())
+        if (!WebMatrix.WebData.WebSecurity.UserExists(userName))
         {
-            Repository.AccountMail(userName, password);
+            if(Validation.IsValid())
+            {
+                Repository.AccountMail(userName, password);
 
-            LeraarRepo.MakeLeraar(userName, password, voornaam, achternaam, vak);
-            Response.Redirect("~/Decaan/Leraar/LeraarOverzicht");
+                LeraarRepo.MakeLeraar(userName, password, voornaam, achternaam, vak);
+                Response.Redirect("~/Decaan/Leraar/LeraarOverzicht");
+            }
         }
+        else
+        {
+            Validation.AddFormError("Gebruiker bestaat al.");
+        }
+        
     }
 }
 
