--- a/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
@@ -40,7 +40,7 @@
     </tr>
     </thead>
     <tbody id="table">
-        @foreach (MailRepo.Mail mail in mails)
+        @foreach (MailRepo.Mail mail in mails) // maak een overzicht van alle mail concepten
         {
         <tr>
             <td>@mail.Onderwerp</td>
